--- a/package.json
+++ b/package.json
@@ -7,5 +7,10 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "server": "nodemon"
   }
 }
