--- a/create-react-app/package.json
+++ b/create-react-app/package.json
@@ -1,23 +1,18 @@
 {
-  "name": "client",
+  "name": "create-react-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.19.0",
-    "gsap": "^3.0.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
-    "react-stack-grid": "^0.7.1",
-    "styled-components": "^4.4.1"
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-scripts": "3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build --output public",
+    "dev": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
-    "server": "nodemon"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
