--- a/now.json
+++ b/now.json
@@ -7,6 +7,6 @@
         "config": {"distDir": "build"} 
         }],
     "routes": [
-        { "src": "/(.*)", "dest": "StylistFind-FE/$1" }
+        { "src": "/(.*)", "dest": "StylistFind-FE/client/$1" }
     ]
   }
