--- a/now.json
+++ b/now.json
@@ -2,14 +2,14 @@
     "version": 2,
     "name": "StylistFind-FE",
     "builds": [{ 
-        "src": "client/package.json", 
+        "src": "StylistFind-FE/client/package.json", 
         "use": "@now/next", 
         "config": {"distDir": "build"} 
         }],
     "routes": [
         { 
             "src": "/(.*)", 
-            "dest": "/client/$1",
+            "dest": "/StylistFind-FE/client/$1",
             "headers" : {
                 "x-request-path": "$1"
             } 
