--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "server": "nodemon"
+    "server": "nodemon",
+    "now-build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": "react-app"
