--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,8 @@
     "dotenv": "^8.2.0",
     "google-maps-react": "^2.0.2",
     "gsap": "^3.0.1",
+    "jest": "^25.3.0",
+    "puppeteer": "^2.1.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
@@ -18,7 +20,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "server": "nodemon",
     "now-build": "react-scripts build"
   },
@@ -36,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-test-renderer": "^16.13.1"
   }
 }
