--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
     "puppeteer": "^2.1.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-google-maps": "^9.4.5",
+    "react-loader-spinner": "^3.1.14",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
