--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-stack-grid": "^0.7.1",
-    "styled-components": "^4.4.1"
+    "styled-components": "^4.4.1",
+    "validator": "^13.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
