--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "dotenv": "^8.2.0",
     "google-maps-react": "^2.0.2",
     "gsap": "^3.0.1",
+    "history": "^4.10.1",
     "puppeteer": "^2.1.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
